# testing

./: README.md  pyproject.toml
src/iot_support/: analysis.py  cli.py  models.py  report.py  rules.py
src/src/iot_support/: parser.py
tests/: test_analysis.py  test_parser.py  test_rules.py
